fixed header letter spacing

--- a/client/app/styles/header.scss
+++ b/client/app/styles/header.scss
@@ -27,6 +27,7 @@ p {
 .starter-header-2 {
   padding-top: 3.5%;
   padding-bottom: 1.5%;
+  letter-spacing: 3px;
   margin: 0;
   font-weight: 900;
 }
